--- a/FriendFamilyMS.properties
+++ b/FriendFamilyMS.properties
@@ -1,1 +1,1 @@
-spring.datasource.url=jdbc:mysql://localhost/infytel_friendfamily
+spring.datasource.url=jdbc:mysql://localhost:3307/infytel_friendfamily
