--- a/application.properties
+++ b/application.properties
@@ -3,4 +3,4 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 eureka.client.service-url.defaultZone=http://localhost:5555/eureka
 spring.datasource.username=root
-soring.datasource.password=manager
+spring.datasource.password=manager
